0.504 2023-11-28
  [Incompatible Changes]
    * Remove the set method in the Sys::Select::Fd_set class.
  [New Features]
    * Add Sys::Time::Util class.
0.503 2023-11-28
  [Bug Fix]
    * Fix a bug that the compilation of the Sys::IO::Dirent failed becuase cygwin do not have d_reclen in struct dirent.
  [New Features]
    * Add the d_off method to the Sys::IO::Dirent class.
    * Add the d_type method to the Sys::IO::Dirent class.
    * Add the utimes method to the Sys::IO class.
    * Add the optional $tv_sec and $tv_usec arguments to the new method in the Sys::Time::Timeval.
    * Add the optional $tv_sec and $tv_nsec arguments to the new method in the Sys::Time::Timespec.
  [Incompatible Changes]
    * The getgroups method in the Sys::User class is changed.
      [Before]
      static method getgroups : int[] ();
      [After]
      static method getgroups : int ($size : int, $list : int[]);
    * The definition of the pipe method in the Sys is changed.
      [Before]
      static method pipe : void ($pipe_fds : int[]);
      
      [After]
      static method pipe : void ($read_fd_ref : int*, $write_fd_ref : int*);
      
    * The definition of the select method in the Sys is changed.
      [Before]
      static method select : int ($readfds : Sys::Select::Fd_set, $writefds : Sys::Select::Fd_set, $exceptfds : Sys::Select::Fd_set, $timeout : Sys::Time::Timeval);
      
      [After]
      static method select : int ($readfds : Sys::Select::Fd_set, $writefds : Sys::Select::Fd_set, $exceptfds : Sys::Select::Fd_set, $timeout : double = 0);
      
0.502 2023-11-23
  [New Features]
    * Add the _putenv_s method to the Sys::Env class.
    * Add the set_env method to the Sys class.
    * Add the alarm method to the Sys class.
    * The kill method in the Sys class can be used in Windows if $pid is equal to the current process id.
  [Incompatible Changes]
    * Remove the Sys::FileTest class.