@@ -319,6 +319,25 @@ class TestCase::Sys::Select {
       }
     }
     
+    {
+      my $set = Sys::Select::Fd_set->new;
+      Sys::Select->FD_SET(0, $set);
+      Sys::Select->FD_SET(1, $set);
+      Sys::Select->FD_SET(2, $set);
+      
+      my $set_clone = $set->clone;
+      
+      unless (Sys::Select->FD_ISSET(0, $set_clone)) {
+        return 0;
+      }
+      unless (Sys::Select->FD_ISSET(1, $set_clone)) {
+        return 0;
+      }
+      unless (Sys::Select->FD_ISSET(2, $set_clone)) {
+        return 0;
+      }
+    }
+    
     return 1;
   }
 }
